Ajout du fait que ce soit un ride ou pas
