# src/api/fidelity/index.js
@@ -1,0 +1,9 @@
+'use strict';
+
+const wrap = require('co-express');
+const controller = require('./fidelity');
+
+module.exports = {
+    fidelitySpend: wrap(controller.earnPoints),
+    profileCheck: wrap(controller.checkPoints)
+};
