# src/api/points/index.js
@@ -1,9 +1,0 @@
-'use strict';
-
-const wrap = require('co-express');
-const controller = require('./points');
-
-module.exports = {
-    earnPoints: wrap(controller.earnPoints),
-    checkPoints: wrap(controller.checkPoints)
-};
